base/infrastructure/headscale/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`headscale.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: headscale
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headscale.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: headscale
          port: 80
  tls:
    secretName: infrastructure-headscale-tls
